--- a/.github/workflows/ruby_install.yml
+++ b/.github/workflows/ruby_install.yml
@@ -1,13 +1,16 @@
-name: Installing Ruby
-on: [push]
-jobs:
-  Installing-Ruby:
-    runs-on: ubuntu-20.04
-    steps:
-     - uses: actions/checkout@v3
-     - uses: ruby/setup-ruby@v1
-       with:
-         ruby-version: '3.0'
-         bundler-cache: true
+name: Linting
 
+on: [push]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
+        with:
+          ruby-version: 2.6
+      - run: bundle install
+      - name: Rubocop
+        run: rubocop
   
