--- a/.github/workflows/ruby_install.yml
+++ b/.github/workflows/ruby_install.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
