--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,7 +14,7 @@ AllCops:
     - "bin/**/*"
 
 Layout/LineLength:
-  Max: 120
+  Max: 250
 
 Metrics/MethodLength:
   Max: 23
@@ -29,4 +29,22 @@ Lint/AmbiguousBlockAssociation:
     - spec/**/*
 
 Style/Documentation:
+  Enabled: false
+
+Lint/ShadowingOuterLocalVariable:
+  Enabled: false
+
+Style/MixinUsage:
+  Enabled: false
+
+Lint/Void:
+  Enabled: false
+
+RSpec/NamedSubject:
+  Enabled: false
+
+Rails/FilePath:
+  Enabled: false
+
+RSpec/MultipleExpectations:
   Enabled: false
